<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/butKey7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butKeyAC"
        android:layout_alignStart="@+id/butKeyAC"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/key7"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey7"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey7"
        android:text="@string/key8"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey8"
        android:layout_marginStart="12sp"
        android:layout_marginTop="1sp"
        android:layout_toEndOf="@+id/butKey8"
        android:text="@string/key9"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butKey7"
        android:layout_alignStart="@+id/butKey7"
        android:layout_marginStart="0sp"
        android:layout_marginTop="15sp"
        android:text="@string/key4"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey4"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey4"
        android:text="@string/key5"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey5"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey5"
        android:text="@string/key6"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butKey4"
        android:layout_alignStart="@+id/butKey4"
        android:layout_marginStart="0sp"
        android:layout_marginTop="15sp"
        android:text="@string/key1"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey1"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey1"
        android:text="@string/key2"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey2"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey2"
        android:text="@string/key3"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey9"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey9"
        android:text="@string/keyMultiply"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey6"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey6"
        android:text="@string/keyMinus"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey3"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKey3"
        android:text="@string/keyAdd"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/butKey0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butKey1"
        android:layout_alignStart="@+id/butKey1"
        android:layout_marginStart="0sp"
        android:layout_marginTop="15sp"
        android:text="@string/key0"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKey0"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/butKey0"
        android:text="@string/keyDot"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyEqual"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKeyDot"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKeyDot"
        android:text="@string/keyEuqal"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12sp"
        android:layout_marginTop="299dp"
        android:text="@string/keyClear"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyLParentheses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKeyAC"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKeyAC"
        android:text="@string/keyLeftParentheses"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyRParentheses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKeyLParentheses"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKeyLParentheses"
        android:text="@string/keyRightParentheses"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butKeyDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/butKeyRParentheses"
        android:layout_marginStart="12sp"
        android:layout_marginTop="0sp"
        android:layout_toEndOf="@+id/butKeyRParentheses"
        android:text="@string/keyDivide"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txtEquation"
        android:layout_width="371dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="13dp"
        android:gravity="end"
        android:text=""
        android:textSize="50sp" />

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="13dp"
        android:gravity="end"
        android:text=""
        android:textSize="60sp" />

    <Button
        android:id="@+id/butKeyDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butKeyDivide"
        android:layout_alignStart="@+id/butKeyDivide"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0sp"
        android:text="@string/keyDel"
        android:textSize="20sp" />


</RelativeLayout>